Fix flicker in board-leave (boom) animation.

--- a/src/animations.less
+++ b/src/animations.less
@@ -102,7 +102,5 @@
 
 :global(.board-leave) {
     background-image: url(../public/images/boom.svg);
-}
-:global(.board-leave.board-leave-active) {
-    animation: drift @TRANSITION_BOOM;
+    animation: drift @TRANSITION_BOOM both;
 }
